force-app/main/default/objects/KT_CLM_Approver_Config__mdt/KT_CLM_Approver_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configures CLM contract lifecycle task ownership by onboarding domain. Use Domain Code ALL as the package fallback.</description>
    <label>KT CLM Approver Config</label>
    <pluralLabel>KT CLM Approver Configs</pluralLabel>
</CustomObject>