force-app/main/default/objects/KT_CLM_Approver_Config__mdt/fields/Domain_Code__c.field-meta.xml
<CustomField>
    <fullName>Domain_Code__c</fullName>
    <description>Onboarding domain code for this approver route. Blank or ALL applies to every domain.</description>
    <label>Domain Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>