force-app/main/default/objects/KT_CLM_Approver_Config__mdt/fields/Owner_Queue_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Owner_Queue_DeveloperName__c</fullName>
    <description>Task queue DeveloperName that owns legal review and counter-signature tasks for the matching domain.</description>
    <label>Owner Queue Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>